test/syntax/wrong/unused3.kk.out
test/syntax/wrong/unused3.kk(3, 5): error: invalid syntax
 unexpected identifier "xs"
 expecting ".", "(", "[", "{", "fn", "fun", operator, ":=", ";", "return" or "}"